backend/deployment/green.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: green
        image: green-app:v2
        imagePullPolicy: Never  
        ports:
        - containerPort: 5000
