backend/deployment/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: green 
  ports:
  - port: 80
    targetPort: 5000
